src/test/resources/arp/invalid/arp_rdw_exp.sil
field f: Int

method foo(x: Ref)
//:: ExpectedOutput(internal:feature.unsupported)
requires acc(x.f, 3*rdw)
//:: ExpectedOutput(internal:feature.unsupported)
ensures acc(x.f, 3*rdw)
{
}